--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ __pycache__/
 __pycache__/process_hds.cpython-310.pyc
 __pycache__/schemas.cpython-310.pyc
 ejemplo/prueba_ConcentradoHDSs.json
+dist/
+build/
+ejemplo/outputs/
+models/xx_ent_wiki_sm/*
